Allow user to change grid size.

--- a/etchasketch.html
+++ b/etchasketch.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div id="gridarea">
+  <div id="buttonArea">
+    <button>Create new grid</button>
+  </div>
+  <div id="gridArea">
   </div>
 </body>
 </html>
